# apricus

./: .env.example  .gitignore  Cargo.toml  README.md
src/: eth_wallet.rs  main.rs
